# kiv-upp

./: .gitignore  cp.sh
c01/: CMakeLists.txt  main.cpp
c01/cw/: CMakeLists.txt
c01/cw/a/: main.cpp
c01/cw/b/: main.cpp
c01/cw/c/: main.cpp
c01/cw/d/: main.cpp
c01/cw/domaci_ukol/: main.cpp
c02/: CMakeLists.txt  graph.txt  out.gcode  out.path.txt
c02/manufactory/: drawing.cpp  drawing.h  geometry.cpp  geometry.h  input.cpp  input.h  main.cpp  optimizer.cpp  optimizer.h  output.cpp  output.h  router.cpp  router.h  slicer.cpp  slicer.h
c02/sdilene_promenne/: main.cpp
c03/: CMakeLists.txt
c03/01_mutex/: main.cpp
c03/02_deadlock/: main.cpp  user.cpp  user.h  world.cpp  world.h
c03/03_condvar/: main.cpp
c03/04_semaphore/: main.cpp  semaphore.h  ukol.cpp
c03/auto/: build.sh
c04/: CMakeLists.txt
c04/01_prodcons/: main.cpp
c04/02_barrier/: main.cpp
c04/03_atomic/: main.cpp
c04/04_ctenar_pisar/: databaze.cpp  databaze.h  main.cpp
c05/: CMakeLists.txt
c05/01_doall/: dynamic.cpp  main.cpp  matrix.h  matrix1.txt  matrix2.txt  serial.cpp  static.cpp
c05/02_dopipe/: config.h  helpers.cpp  main.cpp  matrix.h  parallel.cpp  serial.cpp
c05/03_dynamic/: farmer.cpp  farmer.h  main.cpp  work.cpp  work.h  worker.cpp  worker.h
c05/dcv/: .gitignore  CMakeLists.txt  main.cpp
c06/: CMakeLists.txt
c06/01_reduce_basic/: main.cpp  parallel_atomic.cpp  parallel_independent.cpp  reduce.h  serial.cpp
c06/02_reduce_adv/: main.cpp  reductor.h
c06/03_map_reduce/: combiner.cpp  genesis_filtered.txt  input.cpp  main.cpp  mapper.cpp  mapreduce.h  output.cpp  reducer.cpp  splitter.cpp
c07/: CMakeLists.txt
c07/01_basics/: main.c
c07/02_condvar/: main.c
c07/03_ipc_semafor/: main.c
c07/04_shared_memory/: konzument.c  producent.c
c07/05_thread_pool/: main.c
c08/: CMakeLists.txt
c08/01_parallel_for/: main.cpp
c08/02_parallel_reduce/: main.cpp
c08/03_barriers/: main.cpp
c08/04_tree/: main.cpp
c08/05_bonus/: main.cpp
c09/: CMakeLists.txt
c09/00_zkouska/: main.cpp
c09/01_matrix_mul/: main.cpp
c09/02_reduce/: main.cpp
c09/03_image/: main.cpp
c09/04_playground/: main.cpp
c09/05_bonus/: CMakeLists.txt
c09/05_bonus/src/: controller.cpp  controller.h  fir_filter.cpp  fir_filter.h  main.cpp  patient.cpp  patient.h  sensor.cpp  sensor.h
c10/: CMakeLists.txt
c10/01_basics/: main.cpp
c10/02_advanced/: main.cpp
c10/03_kostra/: main.cpp
sem1/: .gitignore  CMakeLists.txt
sem1/auto/: after_test.sh  build.sh  check_measurements.sh  check_measurements_fast.sh  check_stations.sh  find_year.sh  run.sh  test.sh
sem1/doc/: doc.typ  time
sem1/src/: averager.cpp  averager.hpp  collect_stats.cpp  collect_stats.hpp  convert.cpp  convert.hpp  csv.cpp  csv.hpp  czmap.hpp  draw.cpp  draw.hpp  filter.cpp  filter.hpp  fluctuation.cpp  fluctuation.hpp  loader.cpp  loader.hpp  main.cpp  measurement.hpp  station.hpp  stations.hpp  threadpool.hpp
sem1/src/model/: date.cpp  date.hpp  measurement.hpp  model.hpp  station.hpp  stats.hpp
sem1/src/serial/: loader.hpp  measurement.hpp  station.hpp
sem2/: .gitignore  CMakeLists.txt
sem2/auto/: build.sh  run.sh
sem2/data/: index.html  results.html
sem2/doc/: doc  time
sem2/src/: config.h  main.cpp  server.cpp  server.h  utils.cpp  utils.h  workers.cpp  workers.h
