CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(UPP_SP2)

SET(CMAKE_CXX_STANDARD 23)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FILE(GLOB_RECURSE src src/*.cpp src/*.h)
ADD_EXECUTABLE(${PROJECT_NAME} ${src})

# == SERVER ==
INCLUDE_DIRECTORIES("dep/cpp-httplib")

# == MPI ==
FIND_PACKAGE(MPI REQUIRED)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} MPI::MPI_CXX)

# == SSL ==
SET(USE_SSL ON CACHE BOOL "Use SSL")

IF(USE_SSL)
	ADD_DEFINITIONS(-DUSE_SSL)
	FIND_PACKAGE(OpenSSL REQUIRED)

	INCLUDE_DIRECTORIES("${OPENSSL_INCLUDE_DIR}")

	TARGET_LINK_LIBRARIES(${PROJECT_NAME} OpenSSL::SSL OpenSSL::Crypto)
ENDIF()

# -> bin/
set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin"
)
